focus-on-today project is initial taarget is completed

--- a/Practice/ep-68_localStorage/final-code/Practiiiice/index.html
+++ b/Practice/ep-68_localStorage/final-code/Practiiiice/index.html
@@ -4,8 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Local Storage Practice</title>
+    <script src="script.js" defer></script>
 </head>
 <body>
-    
+    <!-- <p>My name is <span class="name"></span></p>
+    <input type="text" class="nameInp"> -->
+
+    <p>Name: <span class="username"></span></p>
+    <p>Age: <span class="userage"></span></p>
+    <p>Country: <span class="usercountry"></span></p>
+    <p>Address: <span class="address"></span></p>
 </body>
 </html>
