--- a/Projects/1.Focus On Today/index.html
+++ b/Projects/1.Focus On Today/index.html
@@ -31,24 +31,24 @@
                 <p class="error-label">Please set all the goals!</p>
             </div>
             <div class="goal-container">
-                <div class="custom-checkbox">
+                <div  class="custom-checkbox">
                     <img class="check-icon" src="images/tikcircle.svg" alt="">
                 </div>
-                <input type="text" placeholder="Add new goal..." class="goal-input">
+                <input id="first" type="text" placeholder="Add new goal..." class="goal-input">
             </div>
             <div class=" goal-container">
                 <div class="custom-checkbox">
                     <img class="check-icon" src="images/tikcircle.svg" alt="">
                 </div>
-                <input type="text" placeholder="Add new goal..." class="goal-input">
+                <input id="second" type="text" placeholder="Add new goal..." class="goal-input">
             </div>
             <div class="goal-container">
                 <div class="custom-checkbox">
                     <img class="check-icon" src="images/tikcircle.svg" alt="">
                 </div>
-                <input type="text" placeholder="Add new goal..." class="goal-input">
+                <input id="third" type="text" placeholder="Add new goal..." class="goal-input">
             </div>
-
+            
             <p class="quote">"Move one step ahead, today!"</p>
             <p class="made-with">Made with ❤️ by <span style="font-weight: bold;">MONJILA MONI</span></p>
         </div>
