counter app is added

--- a/Practice/ep-70-xhr/starter-code/index.html
+++ b/Practice/ep-70-xhr/starter-code/index.html
@@ -9,9 +9,7 @@
   </head>
   <body style="font-family: cursive">
     <h1>Talking to the outside world</h1>
-    <p>
-      <button>Get Random Image</button>
-    </p>
-    <img src="" style="width: 500px;">
+    <p><button>Get Random Image</button></p>
+    <img src="" alt="" style="width: 500px;">
   </body>
 </html>
