string transformer is added

--- a/Projects/7.String Transformers/index.html
+++ b/Projects/7.String Transformers/index.html
@@ -33,8 +33,9 @@
         </div>
 
         <div class="output-box" >
-            <label>Pascel Case</label>
-            <span id="pascel-case"></span>
+            <label>Pascal Case</label>
+            <span id="pascal-case"></span>
+
         </div>
 
         <div class="output-box" >
