--- a/Projects/10.Auto Typing/index.html
+++ b/Projects/10.Auto Typing/index.html
@@ -6,6 +6,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
     <link rel="stylesheet" href="style.css">
     <script src="script.js" defer></script>
 
@@ -17,7 +18,8 @@
 </head>
 
 <body>
-    <span id="element"></span>
+    <h1>I'm a <span></span></h1>
+    <h2>I'm a <span></span></h2>
 </body>
 
 </html>
