--- a/Projects/4.Countries API/country.html
+++ b/Projects/4.Countries API/country.html
@@ -17,7 +17,7 @@
 <body>
     <header>
         <div class="header-content">
-            <p>Where in the world?</p>
+            <p><a href="/">Back to Home</a></p>
             <p><i class="fa-regular fa-moon"> &nbsp;&nbsp;</i> Dark Mode</p>
         </div>
     </header>
