--- a/Projects/4.Countries API/index.html
+++ b/Projects/4.Countries API/index.html
@@ -16,7 +16,7 @@
 <body>
     <header>
         <div class="header-content">
-            <p>Where in the world?</p>
+            <p><a href="/">Back to Home</a></p>
             <p class="theme-changer"><i class="fa-regular fa-moon"> &nbsp;&nbsp;</i> <span>Dark Mode</span></p>
         </div>
     </header>
