--- a/Projects/4.Countries API/country.html
+++ b/Projects/4.Countries API/country.html
@@ -18,7 +18,7 @@
     <header>
         <div class="header-content">
             <p><a href="/">Back to Home</a></p>
-            <p><i class="fa-regular fa-moon"> &nbsp;&nbsp;</i> Dark Mode</p>
+            <p class="theme-changer"><i class="fa-regular fa-moon"> &nbsp;&nbsp;</i> <span>Dark Mode</span></p>
         </div>
     </header>
 
